Fix login masthead spacing on app

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -109,6 +109,12 @@ div .photo-book {
   margin-right: auto;
 }
 
+.masthead-app {
+  background-color: $grey-10;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 .masthead-small {
   background-color: $grey-10;
   padding-top: 3.5rem;
